# argus

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARGUS_DISCO_POSSE_POST.md  USAGE.md
src/argus/: __init__.py  captioner.py  cli.py  config.py  database.py  dependencies.py  extractor.py  pipeline.py  progress.py  scanner.py  serve.py  status.py
tests/: test_scanner.py
