[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-video-indexer"
version = "0.1.0"
description = "Local-first video inventory and metadata extraction for creator footage libraries."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Argus Contributors" }
]
dependencies = []

[project.scripts]
argus = "argus.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
